--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: cli-go/go.mod
+          cache: false
 
       - name: Check gofmt
         run: test -z "$(gofmt -l .)"
