--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: cli-go/go.mod
+          cache: false
 
       - name: Validate version format
         env:
@@ -54,6 +55,8 @@ jobs:
         env:
           VERSION: ${{ inputs.version }}
         run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git tag -a "$VERSION" -m "Release $VERSION"
           git push origin "$VERSION"
 
