ai slop: fix python quality and repo hygiene checks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,11 @@ repos:
 
   - repo: local
     hooks:
+      - id: python-compile-check
+        name: python compile check
+        language: python
+        entry: python -m compileall sublime-plugin/Margin
+        pass_filenames: false
       - id: gofmt-check
         name: gofmt check
         language: system
